--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "description": "A simple react static site generator",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+     "release": "release-it"
   },
   "bin": {
     "pequeno": "./lib/cmd.js"
@@ -29,5 +30,8 @@
     "react-dom": "^17.0.2",
     "styled-components": "^5.3.0",
     "winston": "^3.3.3"
+  },
+  "devDependencies": {
+    "release-it": "^14.8.0"
   }
 }
