--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cheerio": "^1.0.0-rc.9",
     "chokidar": "^3.5.1",
     "esbuild": "^0.12.8",
+    "esbuild-plugin-alias": "^0.1.2",
     "esbuild-plugin-svgr": "^0.0.1",
     "fast-glob": "^3.2.5",
     "fisarmonica": "^1.3.5",
