--- a/package.json
+++ b/package.json
@@ -13,23 +13,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bluebird": "^3.7.2",
-    "browser-sync": "^2.26.14",
-    "cheerio": "^1.0.0-rc.9",
-    "chokidar": "^3.5.1",
-    "esbuild": "^0.12.8",
-    "esbuild-plugin-alias": "^0.1.2",
-    "esbuild-plugin-svgr": "^0.0.1",
-    "fast-glob": "^3.2.5",
-    "fisarmonica": "^1.3.5",
-    "fs-extra": "^9.1.0",
-    "lodash": "^4.17.21",
-    "minimist": "^1.2.5",
-    "node-cache": "^5.1.2",
-    "ora": "^5.4.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "styled-components": "^5.3.0",
+    "bluebird": "3.7.2",
+    "browser-sync": "2.26.14",
+    "cheerio": "1.0.0-rc.9",
+    "chokidar": "3.5.1",
+    "esbuild": "0.12.8",
+    "esbuild-plugin-svgr": "0.0.1",
+    "fast-glob": "3.2.5",
+    "fisarmonica": "1.3.5",
+    "fs-extra": "9.1.0",
+    "lodash": "4.17.21",
+    "minimist": "1.2.5",
+    "node-cache": "5.1.2",
+    "ora": "5.4.0",
+    "react": "16.14.0",
+    "react-dom": "16.14.0",
+    "styled-components": "4.4.1",
     "winston": "^3.3.3"
   },
   "devDependencies": {
