Script optimizations, readme

--- a/example/public/manifest.json
+++ b/example/public/manifest.json
@@ -1,6 +1,7 @@
 {
-    "name": "",
-    "short_name": "",
+    "name": "Pequeño",
+    "description": "A React static site generator.",
+    "short_name": "Pequeño",
     "icons": [
         {
             "src": "/img/favicons/android-chrome-192x192.png",
@@ -15,5 +16,6 @@
     ],
     "theme_color": "#ffffff",
     "background_color": "#ffffff",
-    "display": "standalone"
+    "display": "standalone",
+    "start_url": "/"
 }
