--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "release": "release-it",
-    "dev": "node lib/cmd.js --verbose --serve --example",
-    "build": "node lib/cmd.js --verbose --example"
+    "dev": "node lib/cmd.js --verbose --serve --example --clean",
+    "build": "node lib/cmd.js --verbose --example --clean"
   },
   "bin": {
     "pequeno": "lib/cmd.js"
@@ -22,7 +22,6 @@
     "esbuild": "0.12.8",
     "esbuild-plugin-svgr": "0.0.1",
     "fast-glob": "3.2.5",
-    "fisarmonica": "1.3.5",
     "fs-extra": "9.1.0",
     "lodash": "4.17.21",
     "minimist": "1.2.5",
@@ -34,6 +33,9 @@
     "winston": "3.3.3"
   },
   "devDependencies": {
-    "release-it": "^14.8.0"
+    "fisarmonica": "^1.3.5",
+    "micromodal": "^0.4.6",
+    "release-it": "^14.8.0",
+    "vanilla-lazyload": "^17.4.0"
   }
 }
