spinner fix, added pequeno instance to data files

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "release": "release-it",
     "dev": "node lib/cmd.js --verbose --serve --example --clean",
-    "build": "node lib/cmd.js --verbose --example --clean"
+    "build-verbose": "node lib/cmd.js --verbose --example --clean",
+    "build": "node lib/cmd.js --example --clean"
   },
   "bin": {
     "pequeno": "lib/cmd.js"
