--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "ora": "5.4.1",
     "react": "16.14.0",
     "react-dom": "16.14.0",
+    "react-is": "^17.0.2",
     "styled-components": "5.3.0",
     "winston": "3.3.3"
   },
