--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "minimist": "1.2.5",
     "node-cache": "5.1.2",
     "ora": "5.4.1",
+    "piscina": "^3.1.0",
     "react": "16.14.0",
     "react-dom": "16.14.0",
     "styled-components": "5.3.1",
