better build, single page option

--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "release": "release-it",
-    "dev": "node lib/cmd.js  --serve --example --clean",
+    "dev": "node lib/cmd.js  --serve --example",
     "dev-verbose": "node lib/cmd.js  --verbose --serve --example --clean",
+    "dev-page": "node lib/cmd.js --example --serve --page=/news/news-1-slug/index.html",
     "build-verbose": "node lib/cmd.js --verbose --example --clean",
-    "build": "node lib/cmd.js --example --clean"
+    "build": "node lib/cmd.js --example --clean",
+    "build-page": "node lib/cmd.js --example --clean --page=/news/news-1-slug/index.html"
   },
   "bin": {
     "pequeno": "lib/cmd.js"
@@ -39,11 +41,12 @@
     "lodash": "4.17.21",
     "minimist": "1.2.5",
     "node-cache": "5.1.2",
+    "object-hash": "^2.2.0",
     "ora": "5.4.1",
-    "piscina": "^3.1.0",
     "react": "16.14.0",
     "react-dom": "16.14.0",
     "styled-components": "5.3.1",
+    "throng": "^5.0.0",
     "winston": "3.3.3"
   },
   "devDependencies": {
