--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pequeno",
-  "version": "0.0.26",
+  "version": "0.1.0-beta.0",
   "description": "A simpler react static site generator",
   "homepage": "https://github.com/signalkuppe/pequeno",
   "author": {
