--- a/package.json
+++ b/package.json
@@ -35,20 +35,21 @@
     "esbuild": "0.12.28",
     "esbuild-plugin-svgr": "0.0.3",
     "fast-glob": "3.2.7",
+    "fisarmonica": "^1.3.5",
     "fs-extra": "10.0.0",
     "lodash": "4.17.21",
+    "micromodal": "^0.4.10",
     "minimist": "1.2.5",
     "node-cache": "5.1.2",
+    "normalize-path": "^3.0.0",
     "ora": "5.4.1",
     "react": "16.14.0",
     "react-dom": "16.14.0",
     "styled-components": "5.3.1",
+    "vanilla-lazyload": "^17.5.0",
     "winston": "3.3.3"
   },
   "devDependencies": {
-    "fisarmonica": "^1.3.5",
-    "micromodal": "^0.4.6",
-    "release-it": "^14.11.6",
-    "vanilla-lazyload": "^17.4.0"
+    "release-it": "^14.11.6"
   }
 }
