--- a/package.json
+++ b/package.json
@@ -31,12 +31,12 @@
   "main": "./lib/exports.js",
   "license": "ISC",
   "dependencies": {
-    "async": "3.2.1",
+    "async": "3.2.2",
     "browser-sync": "2.27.7",
     "cheerio": "1.0.0-rc.10",
     "chokidar": "3.5.2",
-    "esbuild": "0.13.13",
-    "esbuild-plugin-svgr": "0.0.3",
+    "esbuild": "0.14.8",
+    "esbuild-plugin-svgr": "1.0.0",
     "fast-glob": "3.2.7",
     "fisarmonica": "^1.3.5",
     "fs-extra": "10.0.0",
@@ -49,11 +49,11 @@
     "react": "16.14.0",
     "react-dom": "16.14.0",
     "sitemap": "^7.0.0",
-    "styled-components": "5.3.1",
+    "styled-components": "5.3.3",
     "vanilla-lazyload": "^17.5.0",
     "winston": "3.3.3"
   },
   "devDependencies": {
-    "release-it": "^14.11.6"
+    "release-it": "14.11.8"
   }
 }
