--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "ssg",
     "static",
     "site",
-    "generator"
+    "generator",
+    "vanilla",
+    "js"
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
