--- a/package.json
+++ b/package.json
@@ -33,29 +33,29 @@
   "main": "./lib/exports.js",
   "license": "ISC",
   "dependencies": {
-    "async": "3.2.2",
-    "browser-sync": "2.27.7",
+    "async": "3.2.3",
+    "browser-sync": "2.27.9",
     "cheerio": "1.0.0-rc.10",
-    "chokidar": "3.5.2",
-    "esbuild": "0.14.8",
+    "chokidar": "3.5.3",
+    "esbuild": "0.14.31",
     "esbuild-plugin-svgr": "1.0.0",
-    "fast-glob": "3.2.7",
-    "fisarmonica": "^1.3.5",
-    "fs-extra": "10.0.0",
+    "fast-glob": "3.2.11",
+    "fisarmonica": "1.3.5",
+    "fs-extra": "10.0.1",
     "lodash": "4.17.21",
     "micromodal": "^0.4.10",
-    "minimist": "1.2.5",
+    "minimist": "^1.2.6",
     "node-cache": "5.1.2",
-    "normalize-path": "^3.0.0",
+    "normalize-path": "3.0.0",
     "ora": "5.4.1",
     "react": "16.14.0",
     "react-dom": "16.14.0",
-    "sitemap": "^7.0.0",
-    "styled-components": "5.3.3",
-    "vanilla-lazyload": "^17.5.0",
-    "winston": "3.3.3"
+    "sitemap": "7.1.1",
+    "styled-components": "5.3.5",
+    "vanilla-lazyload": "17.6.1",
+    "winston": "3.7.2"
   },
   "devDependencies": {
-    "release-it": "14.11.8"
+    "release-it": "14.14.0"
   }
 }
