--- a/package.json
+++ b/package.json
@@ -37,14 +37,14 @@
     "browser-sync": "2.27.9",
     "cheerio": "1.0.0-rc.10",
     "chokidar": "3.5.3",
-    "esbuild": "0.14.31",
+    "esbuild": "0.14.38",
     "esbuild-plugin-svgr": "1.0.0",
     "fast-glob": "3.2.11",
     "fisarmonica": "1.3.5",
     "fs-extra": "10.0.1",
     "lodash": "4.17.21",
-    "micromodal": "^0.4.10",
-    "minimist": "^1.2.6",
+    "micromodal": "0.4.10",
+    "minimist": "1.2.6",
     "node-cache": "5.1.2",
     "normalize-path": "3.0.0",
     "ora": "5.4.1",
