--- a/package.json
+++ b/package.json
@@ -33,15 +33,15 @@
   "main": "./lib/exports.js",
   "license": "ISC",
   "dependencies": {
-    "async": "3.2.3",
-    "browser-sync": "2.27.9",
+    "async": "3.2.4",
+    "browser-sync": "2.27.10",
     "cheerio": "1.0.0-rc.10",
     "chokidar": "3.5.3",
-    "esbuild": "0.14.38",
-    "esbuild-plugin-svgr": "1.0.0",
+    "esbuild": "0.14.49",
+    "esbuild-plugin-svgr": "1.0.1",
     "fast-glob": "3.2.11",
     "fisarmonica": "1.3.5",
-    "fs-extra": "10.0.1",
+    "fs-extra": "10.1.0",
     "lodash": "4.17.21",
     "micromodal": "0.4.10",
     "minimist": "1.2.6",
@@ -50,12 +50,12 @@
     "ora": "5.4.1",
     "react": "16.14.0",
     "react-dom": "16.14.0",
-    "sitemap": "7.1.1",
     "styled-components": "5.3.5",
-    "vanilla-lazyload": "17.6.1",
-    "winston": "3.7.2"
+    "winston": "3.8.1"
   },
   "devDependencies": {
-    "release-it": "14.14.0"
+    "release-it": "15.1.1",
+    "sitemap": "^7.1.1",
+    "vanilla-lazyload": "^17.8.2"
   }
 }
