--- a/package.json
+++ b/package.json
@@ -37,25 +37,25 @@
     "browser-sync": "2.27.10",
     "cheerio": "1.0.0-rc.10",
     "chokidar": "3.5.3",
-    "esbuild": "0.14.49",
+    "esbuild": "0.15.12",
     "esbuild-plugin-svgr": "1.0.1",
-    "fast-glob": "3.2.11",
+    "fast-glob": "3.2.12",
     "fisarmonica": "1.3.5",
     "fs-extra": "10.1.0",
     "lodash": "4.17.21",
     "micromodal": "0.4.10",
-    "minimist": "1.2.6",
+    "minimist": "1.2.7",
     "node-cache": "5.1.2",
     "normalize-path": "3.0.0",
     "ora": "5.4.1",
     "react": "16.14.0",
     "react-dom": "16.14.0",
-    "styled-components": "5.3.5",
-    "winston": "3.8.1"
+    "styled-components": "5.3.6",
+    "winston": "3.8.2"
   },
   "devDependencies": {
-    "release-it": "15.1.1",
-    "sitemap": "^7.1.1",
-    "vanilla-lazyload": "^17.8.2"
+    "release-it": "15.5.0",
+    "sitemap": "7.1.1",
+    "vanilla-lazyload": "17.8.3"
   }
 }
