--- a/package.json
+++ b/package.json
@@ -33,13 +33,15 @@
   "main": "./lib/exports.js",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "^7.22.11",
     "async": "3.2.4",
-    "browser-sync": "2.29.1",
+    "babel-plugin-styled-components": "^2.1.4",
+    "browser-sync": "2.29.3",
     "cheerio": "1.0.0-rc.12",
     "chokidar": "3.5.3",
-    "esbuild": "0.17.15",
-    "esbuild-plugin-svgr": "1.1.0",
-    "fast-glob": "3.2.12",
+    "esbuild": "0.19.2",
+    "esbuild-plugin-svgr": "2.1.0",
+    "fast-glob": "3.3.1",
     "fisarmonica": "1.3.5",
     "fs-extra": "11.1.1",
     "lodash": "4.17.21",
@@ -49,12 +51,11 @@
     "ora": "5.4.1",
     "react": "16.14.0",
     "react-dom": "16.14.0",
-    "styled-components": "5.3.9",
-    "winston": "3.8.2"
+    "styled-components": "5.3.11",
+    "winston": "3.10.0"
   },
   "devDependencies": {
-    "release-it": "15.10.1",
-    "sitemap": "7.1.1",
-    "vanilla-lazyload": "17.8.3"
+    "release-it": "16.1.5",
+    "sitemap": "7.1.1"
   }
 }
