fixes, allow custom arguments, optional dataParam parameter

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "release": "release-it",
     "dev": "node lib/cmd.js  --serve --example --noAfterBuild --noProcessHtml",
     "dev-verbose": "node lib/cmd.js  --verbose --serve --example --clean --noAfterBuild --noProcessHtml",
-    "dev-news": "node lib/cmd.js --example --serve --page=news-item --path=/news/news-1-slug/index.html --data=news --noAfterBuild --noProcessHtml",
+    "dev-news": "node lib/cmd.js --example --serve --page=news-item  --data=news --noAfterBuild --noProcessHtml",
+    "dev-one-news": "node lib/cmd.js --example --serve --page=news-item --path=/news/news-1-slug/index.html --data=news --dataParam=news-1-slug --noAfterBuild --noProcessHtml",
     "dev-page": "node lib/cmd.js --example --serve --page=test --noAfterBuild --noProcessHtml --noData",
     "dev-empty": "node lib/cmd.js --example --serve --page=empty --noAfterBuild --noProcessHtml --noData --noCopy --noPublicCopy",
     "build": "node lib/cmd.js --example",
